Fix viewport height on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -9,14 +9,11 @@ html {
   margin: 0;
 }
 
-body,
-.calculator {
-  height: 100vh;
-}
 
 .calculator {
   background-color: #22252d;
   height: 100vh;
+  height: calc(var(--vh, 1vh)*100);
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
